--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react-dom": "^18.2.0",
     "umi": "^4.0.83",
     "umi-request": "^1.4.0"
-
   },
   "devDependencies": {
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
-    "chance": "^1.1.11"
+    "chance": "^1.1.11",
+    "eslint": "^8.51.0"
   }
 }
