--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "ahooks": "^3.7.8",
     "antd": "^5.9.3",
+    "global": "^4.4.0",
     "jotai": "^2.4.3",
+    "netlify-cli": "^16.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "umi": "^4.0.83",
@@ -25,3 +27,4 @@
     "eslint": "^8.51.0"
   }
 }
+
